# Personalized.TE.KO.Care

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.streamlit/: deployment_config.toml  runtime.py
dataset/: te_koa_R01_only_RCT_data.xlsx
docs/: configuration.md
docusaurus-docs.backup.1/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docusaurus-docs.backup.1/docs/: api.md  architecture.md  configuration.md  dashboard.md  docker-usage.md  installation.md  intro.md
scripts/: install.sh  run_dashboard.sh
setup_config/: MANIFEST.in  setup.py
setup_config/docker/: Dockerfile  docker-compose.yml
te_koa/: __init__.py  cli.py
te_koa/configurations/: settings.py
te_koa/io/: __init__.py  data_loader.py
te_koa/utils/: __init__.py  clustering_algorithms.py  clustering_manager.py  dimensionality_reducer.py  variable_screener.py
te_koa/visualization/: __init__.py  app.backup.py  app.py
te_koa/visualization/app_refactored_claude_components/: __init__.py  data_manager.py  pages.py
te_koa/visualization/backups/: app.backup.1.py  app.backup.2.py  app_refactored_gemini.backup.3.py
te_koa/visualization/backups/app_refactored_gemini_components/: __init__.py  data_manager.py  model_manager.py  page_renderers.py  plotter.py  ui_helpers.py
tekoa/: __init__.py  cli.py  main.py
tekoa/configuration/: __init__.py  config.json  params.py  settings.py
tekoa/io/: analyze_dictionary.py  analyze_excel_file.py  data_loader.py
tekoa/tests/: test_visualization_data_manager_phase2.py  test_visualization_pages_phase2.py
tekoa/utils/: __init__.py  clustering_algorithms.py  clustering_manager.py  clustering_validation.py  data_quality_enhancer.py  dimensionality_reducer.py  phenotype_characterizer.py  phenotype_discovery.py  variable_screener.py  visualization_utils.py
tekoa/visualization/: __init__.py  app.py  data_manager.py  pages.py  phase2_pages.py  ui_utils.py
tests/: test_clustering_algorithms.py  test_clustering_manager.py  test_clustering_validation.py  test_data_loader.py  test_data_manager_clustering.py  test_dimensionality_reducer.py  test_phenotype_characterizer.py
