[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "tekoa"
version     = "0.2.1"
description = "A data science and machine learning framework for nursing research"
readme      = "README.md"
authors     = [ {name = "Artin Majdi", email = "msm2024@gmail.com"} ]
license     = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
keywords = ["nursing research", "healthcare", "AI", "medical analysis"]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "streamlit",
    "openpyxl",
    "altair",
    "plotly",
    "scikit-learn",
    "pytest",
    "watchdog",
    "protobuf",
    "sacremoses",
    "pillow",
    "pydantic",
    "python-dotenv",
    "shap",
    "statsmodels",
    "scipy",
    "prince",
    "colorcet",
    "networkx",
    "wordcloud",
    "pytest-mock",
]

[project.urls]
Homepage      = "https://github.com/artinmajdi/tekoa"
Documentation = "https://github.com/artinmajdi/tekoa/docs"
Repository    = "https://github.com/artinmajdi/tekoa.git"
Issues        = "https://github.com/artinmajdi/tekoa/issues"

[project.scripts]
tekoa = "tekoa.cli:run_dashboard"

[tool.setuptools]
packages = [
    "tekoa",
    "tekoa.visualization",
    "tekoa.io",
    "tekoa.utils",
]

include-package-data = true
